[tool.poetry]
name = "generative-nodes"
version = "0.0.1"
description = ""
authors = ["Daniel Burger <public@danielburger.online>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
